--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,13 @@
 {
-    "redirects": [
+    "rewrites": [
         {
             "source": "/nodriza",
-            "destination": "https://nodriza-nu.vercel.app/",
-            "permanent": false
+            "destination": "https://nodriza-nu.vercel.app/"
         },
         {
             "source": "/nodriza/:path*",
-            "destination": "https://nodriza-nu.vercel.app/:path*",
-            "permanent": false
-        }
-    ],
-    "rewrites": [
+            "destination": "https://nodriza-nu.vercel.app/:path*"
+        },
         {
             "source": "/nodriza-preparacion",
             "destination": "https://nodriza-webapp.vercel.app/nodriza/?view=confirmation"
