--- a/vercel.json
+++ b/vercel.json
@@ -34,11 +34,11 @@
         },
         {
             "source": "/abundancia-masterclass",
-            "destination": "https://masterclass-abundancia.vercel.app/abundancia-masterclass"
+            "destination": "https://masterclass-abundancia-landing.vercel.app/"
         },
         {
             "source": "/abundancia-masterclass/:path*",
-            "destination": "https://masterclass-abundancia.vercel.app/abundancia-masterclass/:path*"
+            "destination": "https://masterclass-abundancia-landing.vercel.app/:path*"
         },
         {
             "source": "/taller-lo-hago-real",
